Smoke icon just in case

--- a/scenarioA/weather/city/pages/on-118_metric_e.html
+++ b/scenarioA/weather/city/pages/on-118_metric_e.html
@@ -199,7 +199,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           </li>
         </ul>
         <div class="row no-gutters wb-eqht hidden-print">
-          <div class="col-sm-2 brdr-rght  text-center"><img width="60" height="51" class="center-block mrgn-tp-md" src="../../../weather/weathericons/01.gif" alt="Mainly Sunny" title="Mainly Sunny"><p class="visible-xs text-center">Mainly Sunny</p>
+          <div class="col-sm-2 brdr-rght  text-center"><img width="60" height="51" class="center-block mrgn-tp-md" src="../../../weather/weathericons/44.gif" alt="Smoke" title="Smoke"><p class="visible-xs text-center">Smoke</p>
             <div>
               <p class="text-center mrgn-tp-md mrgn-bttm-sm lead"><span class="wxo-metric-hide">23&deg;<abbr title="Celsius">C</abbr>
                 </span><span class="wxo-imperial-hide wxo-city-hidden">73&deg;<abbr title="Fahrenheit">F</abbr>
@@ -281,7 +281,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           </div>
         </div>
         <div class="row no-gutters wb-eqht visible-print">
-          <div class="col-sm-2 brdr-rght  text-center"><img width="60" height="51" class="center-block mrgn-tp-md" src="../../../weather/weathericons/01.gif" alt="Mainly Sunny" title="Mainly Sunny"><p class="visible-xs text-center">Mainly Sunny</p>
+          <div class="col-sm-2 brdr-rght  text-center"><img width="60" height="51" class="center-block mrgn-tp-md" src="../../../weather/weathericons/44.gif" alt="Smoke" title="Smoke"><p class="visible-xs text-center">Smoke</p>
             <div>
               <p class="text-center mrgn-tp-md mrgn-bttm-sm lead"><span class="wxo-metric-hide">23&deg;<abbr title="Celsius">C</abbr>
                 </span><span class="wxo-imperial-hide wxo-city-hidden">73&deg;<abbr title="Fahrenheit">F</abbr>
@@ -358,7 +358,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           <h2>Current Conditions</h2>
         </summary>
         <div class="row">
-          <div class="col-xs-6"><img width="60" height="51" class="center-block mrgn-tp-md" src="../../../weather/weathericons/01.gif" alt="Mainly Sunny" title="Mainly Sunny"><p class="visible-xs text-center">Mainly Sunny</p>
+          <div class="col-xs-6"><img width="60" height="51" class="center-block mrgn-tp-md" src="../../../weather/weathericons/44.gif" alt="Mainly Sunny" title="Mainly Sunny"><p class="visible-xs text-center">Smoke</p>
           </div>
           <div class="col-xs-6">
             <div>
@@ -501,14 +501,14 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             </th>
           </tr>
           <tr>
-            <td><img width="60" height="51" src="../../../weather/weathericons/09.gif" alt="A few showers or thunderstorms" class="center-block" title="A few showers or thunderstorms"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">21&deg;<abbr title="Celsius">C</abbr>
+            <td><img width="60" height="51" src="../../../weather/weathericons/44.gif" alt="Smoke" class="center-block" title="Smoke"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">21&deg;<abbr title="Celsius">C</abbr>
                 </span><span class="high wxo-imperial-hide wxo-city-hidden" title="max">70&deg;<abbr title="Fahrenheit">F</abbr>
                 </span>
               </p>
               <p class="mrgn-bttm-0 pop text-center" title="Chance of Precipitation">
                 <small> </small>
               </p>
-              <p class="mrgn-bttm-0">A few showers or thunderstorms</p>
+              <p class="mrgn-bttm-0">Smoke</p>
             </td>
             <td><img width="60" height="51" src="../../../weather/weathericons/09.gif" alt="Chance of showers" class="center-block" title="Chance of showers"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">20&deg;<abbr title="Celsius">C</abbr>
                 </span><span class="high wxo-imperial-hide wxo-city-hidden" title="max">68&deg;<abbr title="Fahrenheit">F</abbr>
