--- a/scenarioT/weather/city/pages/on-118_metric_e.html
+++ b/scenarioT/weather/city/pages/on-118_metric_e.html
@@ -198,7 +198,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           </li>
         </ul>
         <div class="row no-gutters wb-eqht hidden-print">
-          <div class="col-sm-2 brdr-rght  text-center"><img width="60" height="51" class="center-block mrgn-tp-md" src="../../../weather/weathericons/01.gif" alt="Mainly Sunny" title="Mainly Sunny"><p class="visible-xs text-center">Mainly Sunny</p>
+          <div class="col-sm-2 brdr-rght  text-center"><img width="60" height="51" class="center-block mrgn-tp-md" src="../../../weather/weathericons/12.gif" alt="Mainly Sunny" title="Mainly Sunny"><p class="visible-xs text-center">Mainly Sunny</p>
             <div>
               <p class="text-center mrgn-tp-md mrgn-bttm-sm lead"><span class="wxo-metric-hide">23&deg;<abbr title="Celsius">C</abbr>
                 </span><span class="wxo-imperial-hide wxo-city-hidden">73&deg;<abbr title="Fahrenheit">F</abbr>
@@ -657,7 +657,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
                   <td>
                     <strong title="Sunday night">Tonight</strong>
                   </td>
-                  <td>A few showers ending late this evening then mainly cloudy. RWind southwest 20 km/h becoming light this evening. Low 12.</td>
+                  <td>A few showers ending late this evening then mainly cloudy. Wind southwest 20 km/h becoming light this evening. Low 12.</td>
                 </tr>
                 <tr class="pdg-btm-0">
                   <td class="uniform_width">
