--- a/scenarioT/weather/city/pages/on-118_metric_e.html
+++ b/scenarioT/weather/city/pages/on-118_metric_e.html
@@ -198,7 +198,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           </li>
         </ul>
         <div class="row no-gutters wb-eqht hidden-print">
-          <div class="col-sm-2 brdr-rght  text-center"><img width="60" height="51" class="center-block mrgn-tp-md" src="../../../weather/weathericons/12.gif" alt="Mainly Sunny" title="Mainly Sunny"><p class="visible-xs text-center">Mainly Sunny</p>
+          <div class="col-sm-2 brdr-rght  text-center"><img width="60" height="51" class="center-block mrgn-tp-md" src="../../../weather/weathericons/12.gif" alt="Mainly Sunny" title="Mainly Sunny"><p class="visible-xs text-center">A few showers</p>
             <div>
               <p class="text-center mrgn-tp-md mrgn-bttm-sm lead"><span class="wxo-metric-hide">23&deg;<abbr title="Celsius">C</abbr>
                 </span><span class="wxo-imperial-hide wxo-city-hidden">73&deg;<abbr title="Fahrenheit">F</abbr>
@@ -232,7 +232,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
               <div class="col-sm-4 brdr-rght-city">
                 <dl class="dl-horizontal wxo-conds-col1">
                   <dt>Condition:</dt>
-				  <dd class="mrgn-bttm-0">Mostly Cloudy</dd>
+				  <dd class="mrgn-bttm-0">Showers</dd>
 				  <dt>Pressure:</dt>
 				  <dd class="mrgn-bttm-0 wxo-metric-hide">101.2 <abbr title="kilopascals">kPa</abbr>
 				  </dd>
