--- a/scenarioT/weather/radar/xft-index_e.html
+++ b/scenarioT/weather/radar/xft-index_e.html
@@ -245,7 +245,7 @@
 		<div id="animation" class="col-md-8">
 
 		
-				<p class="text-center margin-bottom-none center-block img-responsive" style="background-color: black; width: 580px; color: white";>PRECIPET - Rain / Pluie 2017-07-26, 01:30 PM EDT</p>
+				<p class="text-center margin-bottom-none center-block img-responsive" style="background-color: black; width: 580px; color: white";>PRECIPET - Rain / Pluie</p>
 			
 
 			<div id="animation-info" class="row text-center animation-info">
