--- a/scenarioS/weather/warnings/ottawa-report_e.html
+++ b/scenarioS/weather/warnings/ottawa-report_e.html
@@ -176,7 +176,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 	 <div class="row">
 	 <div class="col-xs-12">
 
-    <h2>Statements</h2> <p><span id="1749456811044843870201701100502wo2080cwvr">10:26 AM PST Saturday 14 January 2017</span><br/> <strong>Blowing Snow Advisory:</strong> </p> 
+    <h2>Statements</h2> <p><span id="1749456811044843870201701100502wo2080cwvr">00:00 AM DD MM YYYY</span><br/> <strong>Blowing Snow Advisory:</strong> </p> 
 <ul> <li>Ottawa</li> </ul>
  <p>BLOWING SNOW ADVISORY IN EFFECT FOR OTTAWA.<br/><br/>Snowfall, with total amounts of 5 to 10 cm is expected.<br/>
 
