--- a/scenarioT/weather/past_conditions/index_e.html
+++ b/scenarioT/weather/past_conditions/index_e.html
@@ -168,7 +168,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 
 
     <h1 property="name" id="wb-cont">Ottawa Macdonald-Cartier Int'l Airport, Ontario</h1>
-    <p class="nojs">Please enable Javascript to view imperial units or the graphic.</p>
+  
     <p>Latitude 45.32&deg; N | 
             
                     Longitude 75.67&deg; W
@@ -178,12 +178,12 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
     <h2 class="panel-title h4 wxo-dpl-inline">Past 24 Hour Conditions</h2>
     <ul class="list-inline small pull-right hidden-xs" style="margin-top:-7px">
       <li>
-        <a class="toggle-unit btn btn-default" style="display: none;">
+        <a class="toggle-unit btn btn-default" style="">
           <abbr title="Convert to Imperial units">Imperial units</abbr>
         </a>
       </li>
       <li>
-        <a class="toggle-view btn btn-default" style="display: none;">Graphic</a>
+        <a class="toggle-view btn btn-default" style="">Graphic</a>
       </li>
     </ul>
     <div class="visible-xs pull-right">
@@ -253,7 +253,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </thead>
         <tbody>
           <tr>
-            <th colspan="15" class="wxo-th-bkg table-date">31 August 2017</th>
+            <th colspan="15" class="wxo-th-bkg table-date">24 August 2017</th>
           </tr>
           <tr>
             <td headers="header1" class="text-center vertical-center"> 13:00 </td>
@@ -1278,12 +1278,12 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 
 <!--[if gte IE 9 | !IE ]><!-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
-<script src="../template/gcweb/v4.0.22/js/wet-boew.min.js"></script>
+<script src="../template/GCWeb/js/wet-boew.min.js"></script>
 <!--<![endif]-->
 <!--[if lt IE 9]>
 <script src="/template/gcweb/v4.0.22/js/ie8-wet-boew2.min.js"></script>
 <![endif]-->
-<script src="../template/gcweb/v4.0.22/js/theme.min.js"></script>
+<script src="../template/GCWeb/js/theme.min.js"></script>
 
 
 <script src="../cacheable/js/city/jquery-ui-1.10.3.custom.min.js"></script>
@@ -1303,7 +1303,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         }
     });
 </script>
-<script src="../template/gcweb/v4.0.22/js/deps/jquery.dataTables.min.js"></script>
+<script src="../template/GCWeb/js/deps/jquery.dataTables.min.js"></script>
 <script src="../city/js/jquery.h5validate.js"></script>
 <script src="../cacheable/js/myprofile/alerts-1.0.min.js"></script>
 <script src="../cacheable/js/myprofile/refresher-1.0.min.js"></script>
