--- a/scenarioS/weather/past_conditions/index_e.html
+++ b/scenarioS/weather/past_conditions/index_e.html
@@ -109,7 +109,12 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 		<div class="container">
 	<div class="row">
 		<ol class="breadcrumb">
-<li><a href="../../weather/en.html">Home</a></li><li><a href="../../weather/services/environment.html">Environment and natural resources</a></li><li><a href="../../weather/index_e.html">Weather information</a></li>
+		<li><a href="../../weather/en.html">Home</a></li>
+		<li><a href="../../weather/services/environment.html">Environment and natural resources</a></li>
+		<li><a href="../../weather/index_e.html">Weather information</a></li>
+<li><a href="../../weather/mainmenu/weather_menu_e.html">Weather</a></li>
+<li><a href="../../weather/canada_e.html">Local forecasts</a></li>
+<li><a href="../../weather/forecast/canada/ON_index_e.html" title="Ontario">Ontario</a></li>
 		</ol>
 	</div>
 </div>
