image map points to ottawa page

--- a/scenarioT/weather/forecast/canada/ON_index_e.html
+++ b/scenarioT/weather/forecast/canada/ON_index_e.html
@@ -196,7 +196,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
   <area href="/city/pages/on-137_metric_e.html" coords="247,330,301,348" shape="rect" alt="London" title="London" />
   <area href="/city/pages/on-113_metric_e.html" coords="194,118,262,150" shape="rect" alt="Moosonee" title="Moosonee" />
   <area href="/city/pages/on-139_metric_e.html" coords="262,236,323,258" shape="rect" alt="North Bay" title="North Bay" />
-  <area href="/weather/city/pages/on-118_metric_e.html" coords="324,247,361,274" shape="rect" alt="Ottawa (Kanata - Orléans)" title="Ottawa (Kanata - Orléans)" />
+  <area href="../../city/pages/on-118_metric_e.html" coords="324,247,361,274" shape="rect" alt="Ottawa (Kanata - Orléans)" title="Ottawa (Kanata - Orléans)" />
   <area href="/city/pages/on-103_metric_e.html" coords="240,259,310,281" shape="rect" alt="Parry Sound" title="Parry Sound" />
   <area href="/city/pages/on-121_metric_e.html" coords="244,280,317,300" shape="rect" alt="Peterborough" title="Peterborough" />
   <area href="/city/pages/on-147_metric_e.html" coords="187,322,244,343" shape="rect" alt="Sarnia" title="Sarnia" />
