--- a/scenarioT/weather/radar/xft-index_e.html
+++ b/scenarioT/weather/radar/xft-index_e.html
@@ -257,7 +257,7 @@
 				<img 
  				alt="Radar image for Franktown." 
 				title="Radar image for Franktown." 
-				src="../data/radar/detailed/temp_image/XFT_PRECIP_RAIN_2017_08_22_10_00.GIF" 
+				src="../data/radar/detailed/temp_image/XFT_PRECIP_RAIN_2017_08_22_12_00.GIF" 
 				width="580"  
 				height="480"
 				class="wxo-radar-img hidden-xs img-responsive"
@@ -288,7 +288,14 @@
 			<div class="wrapper">
 			
 			
-				<div id="wxo-animator" data-image-current="6" data-image-count="7" data-image-lightning-id="NAT" data-wxo-anim-0="../data/radar/detailed/temp_image/XFT_PRECIP_RAIN_2017_08_22_10_00.GIF" data-wxo-label-0="#1" data-wxo-anim-1="../data/radar/detailed/temp_image/XFT_PRECIP_RAIN_2017_08_22_10_00.GIF" data-wxo-label-1="#2" data-wxo-anim-2="../data/radar/detailed/temp_image/XFT_PRECIP_RAIN_2017_08_22_10_20.GIF" data-wxo-label-2="#3" data-wxo-anim-3="../data/radar/detailed/temp_image/XFT_PRECIP_RAIN_2017_08_22_10_40.GIF" data-wxo-label-3="#4" data-wxo-anim-4="../data/radar/detailed/temp_image/XFT_PRECIP_RAIN_2017_08_22_11_00.GIF" data-wxo-label-4="#5" data-wxo-anim-5="../data/radar/detailed/temp_image/XFT_PRECIP_RAIN_2017_08_22_11_20.GIF" data-wxo-label-5="#6" data-wxo-anim-6="../data/radar/detailed/temp_image/XFT_PRECIP_RAIN_2017_08_22_11_40.GIF" data-wxo-label-6="#7" data-wxo-anim-7="../data/radar/detailed/temp_image/XFT_PRECIP_RAIN_2017_08_22_12_00.GIF" >
+				<div id="wxo-animator" data-image-current="6" data-image-count="7" data-image-lightning-id="NAT" 
+				data-wxo-anim-0="../data/radar/detailed/temp_image/XFT_PRECIP_RAIN_2017_08_22_10_00.GIF" data-wxo-label-0="#1" 
+				data-wxo-anim-1="../data/radar/detailed/temp_image/XFT_PRECIP_RAIN_2017_08_22_10_20.GIF" data-wxo-label-1="#2" 
+				data-wxo-anim-2="../data/radar/detailed/temp_image/XFT_PRECIP_RAIN_2017_08_22_10_40.GIF" data-wxo-label-2="#3" 
+				data-wxo-anim-3="../data/radar/detailed/temp_image/XFT_PRECIP_RAIN_2017_08_22_11_00.GIF" data-wxo-label-3="#4" 
+				data-wxo-anim-4="../data/radar/detailed/temp_image/XFT_PRECIP_RAIN_2017_08_22_11_20.GIF" data-wxo-label-4="#5" 
+				data-wxo-anim-5="../data/radar/detailed/temp_image/XFT_PRECIP_RAIN_2017_08_22_11_40.GIF" data-wxo-label-5="#6" 
+				data-wxo-anim-6="../data/radar/detailed/temp_image/XFT_PRECIP_RAIN_2017_08_22_12_00.GIF" data-wxo-label-6="#7" >
 
 					<div id="wxo-carousel" class="wxo-ie8-hide">
 					
