--- a/scenarioT/weather/past_conditions/index_e.html
+++ b/scenarioT/weather/past_conditions/index_e.html
@@ -258,7 +258,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </thead>
         <tbody>
           <tr>
-            <th colspan="15" class="wxo-th-bkg table-date">24 August 2017</th>
+            <th colspan="15" class="wxo-th-bkg table-date"></th>
           </tr>
           <tr>
             <td headers="header1" class="text-center vertical-center"> 13:00 </td>
