--- a/scenarioS/weather/radar/index_e.html
+++ b/scenarioS/weather/radar/index_e.html
@@ -305,7 +305,7 @@
 		
 					<p id="wxo-rad-choose" class="pagetag text-center">Choose a province or radar station (radar stations are represented by black dots.)</p>
 						
-			<p class="text-center margin-bottom-none center-block img-responsive" style="background-color: black; width: 600px; color: white";> 2017-08-23, 14:40 UTC</p>
+			<p class="text-center margin-bottom-none center-block img-responsive" style="background-color: black; width: 600px; color: white";> Canada Radar </p>
 			
 				<div id="animation-info" class="row text-center animation-info"></div>
 			<div class="animation-frame-nat-nojs" id="animation-frame">
