--- a/scenarioA/weather/past_conditions/index_e.html
+++ b/scenarioA/weather/past_conditions/index_e.html
@@ -743,7 +743,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             <td headers="header10" class="imperialData hidden text-center vertical-center">10</td>
           </tr>
           <tr>
-            <th colspan="15" class="wxo-th-bkg table-date">30 August 2017</th>
+            <th colspan="15" class="wxo-th-bkg table-date">Yesterday</th>
           </tr>
           <tr>
             <td headers="header1" class="text-center vertical-center"> 23:00 </td>
