--- a/scenarioS/weather/city/pages/on-118_metric_e.html
+++ b/scenarioS/weather/city/pages/on-118_metric_e.html
@@ -650,7 +650,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
               <tbody>
                 <tr class="pdg-btm-0">
                   <td>
-                    <a href="/web/20170101123719/http://weather.gc.ca/forecast/hourly/on-118_metric_e.html">
+                    <a href="../../../weather/forecast/hourly/on-118_metric_e.html">
                       <strong title="Sunday">Today</strong>
                     </a>
                   </td>
