--- a/scenarioS/weather/radar/xft-index_e.html
+++ b/scenarioS/weather/radar/xft-index_e.html
@@ -320,8 +320,8 @@
 		<ul class="lst-spcd">
 		<li><a href="../canada_e.html">Canadian Weather</a></li>
 		<li><a href="../warnings/index_e.html">Public Alerts - Canada</a></li>
-		<li><a href="../radar/index_thunder_e.html">Radar - Canada</a></li>
-		<li><a href="/satellite/index_e.html">Satellite - Canada</a></li>
+		<li><a href="../../weather/radar/index_e.html">Radar - Canada</a></li>
+		<li><a href="../../weather/satellite/index_e.html">Satellite - Canada</a></li>
 		<li><a href="/saisons/index_e.html">Seasonal forecasts</a></li>
 		<li><a href="../mainmenu/airquality_menu_e.html">Air Quality </a></li>
 		<li><a href="/marine/index_e.html">Marine - Canada</a></li>
