--- a/scenarioS/weather/city/pages/on-118_metric_e.html
+++ b/scenarioS/weather/city/pages/on-118_metric_e.html
@@ -513,14 +513,15 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
               </p>
               <p class="mrgn-bttm-0">Chance of flurries</p>
             </td>
-            <td><img width="60" height="51" src="../../../weather/weathericons/02.gif" alt="A mix of sun and cloud" class="center-block" title="A mix of sun and cloud"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">-1&deg;<abbr title="Celsius">C</abbr>
+            <td><img width="60" height="51" src="../../../weather/weathericons/08.gif" alt="Chance of flurries" class="center-block" title="Chance of flurries"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">-1&deg;<abbr title="Celsius">C</abbr>
                 </span><span class="high wxo-imperial-hide wxo-city-hidden" title="max">30&deg;<abbr title="Fahrenheit">F</abbr>
                 </span>
               </p>
               <p class="mrgn-bttm-0 pop text-center" title="Chance of Precipitation">
+			  <small> 30%</small>
                 <small> </small>
               </p>
-              <p class="mrgn-bttm-0">A mix of sun and cloud</p>
+              <p class="mrgn-bttm-0">Chance of flurries</p>
             </td>
             <td><img width="60" height="51" src="../../../weather/weathericons/14.gif" alt="Periods of freezing rain or rain" class="center-block" title="Periods of freezing rain or rain"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">3&deg;<abbr title="Celsius">C</abbr>
                 </span><span class="high wxo-imperial-hide wxo-city-hidden" title="max">37&deg;<abbr title="Fahrenheit">F</abbr>
@@ -578,14 +579,14 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             <th class="blankcell" scope="col"> </th>
           </tr>
           <tr>
-            <td><img width="60" height="51" src="../../../weather/weathericons/32.gif" alt="Partly cloudy" class="center-block" title="Partly cloudy"><p class="mrgn-bttm-0"><span class="low wxo-metric-hide" title="min">-6&deg;<abbr title="Celsius">C</abbr>
+            <td><img width="60" height="51" src="../../../weather/weathericons/08.gif" alt="Chance of flurries" class="center-block" title="Chance of flurries"><p class="mrgn-bttm-0"><span class="low wxo-metric-hide" title="min">-6&deg;<abbr title="Celsius">C</abbr>
                 </span><span class="low wxo-imperial-hide wxo-city-hidden" title="min">21&deg;<abbr title="Fahrenheit">F</abbr>
                 </span>
               </p>
               <p class="mrgn-bttm-0 pop text-center" title="Chance of Precipitation">
-                <small> </small>
+                <small> 40% </small>
               </p>
-              <p class="mrgn-bttm-0">Partly cloudy</p>
+              <p class="mrgn-bttm-0">Chance of flurries</p>
             </td>
             <td><img width="60" height="51" src="../../../weather/weathericons/14.gif" alt="Periods of freezing rain or snow" class="center-block" title="Periods of freezing rain or snow"><p class="mrgn-bttm-0"><span class="low wxo-metric-hide" title="min">-5&deg;<abbr title="Celsius">C</abbr>
                 </span><span class="low wxo-imperial-hide wxo-city-hidden" title="min">23&deg;<abbr title="Fahrenheit">F</abbr>
@@ -660,7 +661,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
                   <td>
                     <strong title="Sunday night">Tonight</strong>
                   </td>
-                  <td>A few clouds. Increasing cloudiness overnight. Low minus 6.</td>
+                  <td>Cloudy periods with 40 percent chance of flurries. Low minus 6.</td>
                 </tr>
                 <tr class="pdg-btm-0">
                   <td class="uniform_width">
@@ -668,7 +669,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
                       <abbr title="Monday">Mon</abbr>, 2 <abbr title="January">Jan</abbr>
                     </strong>
                   </td>
-                  <td>A mix of sun and cloud. High minus 1.</td>
+                  <td>Cloudy periods with 30 percent chance of flurries.</td>
                 </tr>
                 <tr class="pdg-tp-0">
                   <td class="uniform_width" title="Monday night"> Night</td>
