--- a/scenarioS/weather/city/pages/on-118_metric_e.html
+++ b/scenarioS/weather/city/pages/on-118_metric_e.html
@@ -184,7 +184,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
     <section>
       <details class="panel panel-default hidden-xs" open="open">
         <summary class="panel-heading">
-          <h2>Current Conditions<span class="small visible-print-inline-block pull-right">Observed at: Ottawa Macdonald-Cartier Int'l Airport   7:00 AM EST Sunday 1 January 2017</span></h2>
+          <h2>Current Conditions<span class="small visible-print-inline-block pull-right">Observed at: Ottawa Macdonald-Cartier Int'l Airport   14:00 PM EST Sunday 1 January 2017</span></h2>
         </summary>
         <ul class="hidden-print hidden-xs pull-right list-inline mrgn-rght-sm mrgn-bttm-0 wxo-moveup">
           <li>
@@ -230,7 +230,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
               <dt>Observed at:</dt>
               <dd class="mrgn-bttm-0">Ottawa Macdonald-Cartier Int'l Airport</dd>
               <dt>Date: </dt>
-              <dd class="mrgn-bttm-0">7:00 AM EST Sunday 1 January 2017</dd>
+              <dd class="mrgn-bttm-0">14:00 PM EST Sunday 1 January 2017</dd>
             </dl>
             <div class="row no-gutters wb-eqht brdr-tp">
               <div class="col-sm-4 brdr-rght-city">
@@ -408,7 +408,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             <dt>Observed at:</dt>
             <dd class="mrgn-bttm-0">Ottawa Macdonald-Cartier Int'l Airport</dd>
             <dt>Date: </dt>
-            <dd class="mrgn-bttm-0">7:00 AM EST Sunday 1 January 2017</dd>
+            <dd class="mrgn-bttm-0">14:00 PM EST Sunday 1 January 2017</dd>
           </dl>
           <dl class="dl-horizontal wxo-conds-xs ">
             <dt>Condition:</dt>
@@ -504,24 +504,24 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             </th>
           </tr>
           <tr>
-            <td><img width="60" height="51" src="../../../weather/weathericons/08.gif" alt="Chance of flurries" class="center-block" title="Chance of flurries"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">-2&deg;<abbr title="Celsius">C</abbr>
+		  <!-- forecast section -->
+            <td><img width="60" height="51" src="../../../weather/weathericons/16.gif" alt="Snow" class="center-block" title="Snow"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">-2&deg;<abbr title="Celsius">C</abbr>
                 </span><span class="high wxo-imperial-hide wxo-city-hidden" title="max">28&deg;<abbr title="Fahrenheit">F</abbr>
                 </span>
               </p>
               <p class="mrgn-bttm-0 pop text-center" title="Chance of Precipitation">
-                <small> 40%</small>
+                <small> </small>
               </p>
-              <p class="mrgn-bttm-0">Chance of flurries</p>
+              <p class="mrgn-bttm-0">Snow</p>
             </td>
-            <td><img width="60" height="51" src="../../../weather/weathericons/08.gif" alt="Chance of flurries" class="center-block" title="Chance of flurries"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">-1&deg;<abbr title="Celsius">C</abbr>
+            <td><img width="60" height="51" src="../../../weather/weathericons/16.gif" alt="Snow" class="center-block" title="Snow"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">-1&deg;<abbr title="Celsius">C</abbr>
                 </span><span class="high wxo-imperial-hide wxo-city-hidden" title="max">30&deg;<abbr title="Fahrenheit">F</abbr>
                 </span>
               </p>
-              <p class="mrgn-bttm-0 pop text-center" title="Chance of Precipitation">
-			  <small> 30%</small>
+               <p class="mrgn-bttm-0 pop text-center" title="Chance of Precipitation">
                 <small> </small>
               </p>
-              <p class="mrgn-bttm-0">Chance of flurries</p>
+              <p class="mrgn-bttm-0">Snow</p>
             </td>
             <td><img width="60" height="51" src="../../../weather/weathericons/14.gif" alt="Periods of freezing rain or rain" class="center-block" title="Periods of freezing rain or rain"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">3&deg;<abbr title="Celsius">C</abbr>
                 </span><span class="high wxo-imperial-hide wxo-city-hidden" title="max">37&deg;<abbr title="Fahrenheit">F</abbr>
@@ -532,7 +532,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
               </p>
               <p class="mrgn-bttm-0">Periods of freezing rain or rain</p>
             </td>
-            <td><img width="60" height="51" src="../../../weather/weathericons/16.gif" alt="Chance of flurries" class="center-block" title="Chance of flurries"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">-2&deg;<abbr title="Celsius">C</abbr>
+            <td><img width="60" height="51" src="../../../weather/weathericons/08.gif" alt="Chance of flurries" class="center-block" title="Chance of flurries"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">-2&deg;<abbr title="Celsius">C</abbr>
                 </span><span class="high wxo-imperial-hide wxo-city-hidden" title="max">28&deg;<abbr title="Fahrenheit">F</abbr>
                 </span>
               </p>
@@ -579,14 +579,14 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             <th class="blankcell" scope="col"> </th>
           </tr>
           <tr>
-            <td><img width="60" height="51" src="../../../weather/weathericons/08.gif" alt="Chance of flurries" class="center-block" title="Chance of flurries"><p class="mrgn-bttm-0"><span class="low wxo-metric-hide" title="min">-6&deg;<abbr title="Celsius">C</abbr>
+            <td><img width="60" height="51" src="../../../weather/weathericons/38.gif" alt="Snow" class="center-block" title="Snow"><p class="mrgn-bttm-0"><span class="low wxo-metric-hide" title="min">-6&deg;<abbr title="Celsius">C</abbr>
                 </span><span class="low wxo-imperial-hide wxo-city-hidden" title="min">21&deg;<abbr title="Fahrenheit">F</abbr>
                 </span>
               </p>
-              <p class="mrgn-bttm-0 pop text-center" title="Chance of Precipitation">
-                <small> 40% </small>
+               <p class="mrgn-bttm-0 pop text-center" title="Chance of Precipitation">
+                <small> </small>
               </p>
-              <p class="mrgn-bttm-0">Chance of flurries</p>
+              <p class="mrgn-bttm-0">Snow</p>
             </td>
             <td><img width="60" height="51" src="../../../weather/weathericons/14.gif" alt="Periods of freezing rain or snow" class="center-block" title="Periods of freezing rain or snow"><p class="mrgn-bttm-0"><span class="low wxo-metric-hide" title="min">-5&deg;<abbr title="Celsius">C</abbr>
                 </span><span class="low wxo-imperial-hide wxo-city-hidden" title="min">23&deg;<abbr title="Fahrenheit">F</abbr>
@@ -655,13 +655,13 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
                       <strong title="Sunday">Today</strong>
                     </a>
                   </td>
-                  <td>Mainly cloudy. 40 percent chance of flurries early this morning. Clearing this morning. High minus 2.</td>
+                  <td>Mainly cloudy. Periods of Snow. High minus 2.</td>
                 </tr>
                 <tr class="pdg-tp-0">
                   <td>
                     <strong title="Sunday night">Tonight</strong>
                   </td>
-                  <td>Cloudy periods with 40 percent chance of flurries. Low minus 6.</td>
+                  <td>Cloudy periods with snow. Low minus 6.</td>
                 </tr>
                 <tr class="pdg-btm-0">
                   <td class="uniform_width">
@@ -669,7 +669,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
                       <abbr title="Monday">Mon</abbr>, 2 <abbr title="January">Jan</abbr>
                     </strong>
                   </td>
-                  <td>Cloudy periods with 30 percent chance of flurries.</td>
+                  <td>Mainly cloudy. Periods of Snow.</td>
                 </tr>
                 <tr class="pdg-tp-0">
                   <td class="uniform_width" title="Monday night"> Night</td>
@@ -757,7 +757,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           <h3 class="h5 mrgn-lft-md hidden-print"><span class="wb-inv">Detailed Forecast</span>Issued: 5:00 AM EST Sunday 1 January 2017</h3>
           <div class="row">
             <div class="col-xs-6">
-			<img width="60" height="51" src="../../../weather/weathericons/08.gif" alt="Chance of flurries" class="pull-right" title="Chance of flurries"></div>
+			<img width="60" height="51" src="../../../weather/weathericons/16.gif" alt="Snow" class="pull-right" title="Snow"></div>
             <div class="col-xs-6">
               <a href="../../../weather/forecast/hourly/on-118_metric_e.html">
                 <strong title="Sunday">Today</strong>
@@ -768,10 +768,10 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             </div>
           </div>
           <div class="row">
-            <div class="col-xs-12 brdr-bttm mrgn-bttm-md">Mainly cloudy. 40 percent chance of flurries early this morning. Clearing this morning. High minus 2.</div>
+            <div class="col-xs-12 brdr-bttm mrgn-bttm-md">Mainly cloudy. Periods of Snow. High minus 2.</div>
           </div>
           <div class="row">
-            <div class="col-xs-6"><img width="60" height="51" src="../../../weather/weathericons/32.gif" alt="Partly cloudy" class="pull-right" title="Partly cloudy"></div>
+            <div class="col-xs-6"><img width="60" height="51" src="../../../weather/weathericons/38.gif" alt="Snow" class="pull-right" title="Snow"></div>
             <div class="col-xs-6">
               <strong title="Sunday night">Tonight</strong>
               <br><span class="low wxo-metric-hide" title="min">-6&deg;<abbr title="Celsius">C</abbr>
@@ -780,10 +780,10 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             </div>
           </div>
           <div class="row">
-            <div class="col-xs-12 brdr-bttm mrgn-bttm-md">A few clouds. Increasing cloudiness overnight. Low minus 6.</div>
+            <div class="col-xs-12 brdr-bttm mrgn-bttm-md">	Cloudy periods with snow. Low minus 6.</div>
           </div>
           <div class="row">
-            <div class="col-xs-6"><img width="60" height="51" src="../../../weather/weathericons/02.gif" alt="A mix of sun and cloud" class="pull-right" title="A mix of sun and cloud"></div>
+            <div class="col-xs-6"><img width="60" height="51" src="../../../weather/weathericons/16.gif" alt="Snow" class="pull-right" title="Snow"></div>
             <div class="col-xs-6">
               <strong>
                 <abbr title="Monday">Mon</abbr>, 2 <abbr title="January">Jan</abbr>
@@ -794,7 +794,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             </div>
           </div>
           <div class="row">
-            <div class="col-xs-12">A mix of sun and cloud. High minus 1.</div>
+            <div class="col-xs-12">	Mainly cloudy. Periods of Snow.</div>
           </div>
           <div class="row">
             <div class="col-xs-12 brdr-bttm mrgn-bttm-md">
