--- a/scenarioS/weather/warnings/ottawa-report_e.html
+++ b/scenarioS/weather/warnings/ottawa-report_e.html
@@ -176,11 +176,11 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 	 <div class="row">
 	 <div class="col-xs-12">
 
-    <h2>Statements</h2> <p><span id="1749456811044843870201701100502wo2080cwvr">00:00 AM DD MM YYYY</span><br/> <strong>Blowing Snow Advisory:</strong> </p> 
+    <h2>Statements</h2> <p><span id="1749456811044843870201701100502wo2080cwvr">14:00 PM EST 1 January 2017</span><br/> <strong>Blowing Snow Advisory:</strong> </p> 
 <ul> <li>Ottawa</li> </ul>
  <p>BLOWING SNOW ADVISORY IN EFFECT FOR OTTAWA.<br/><br/>Snowfall, with total amounts of 5 to 10 cm is expected.<br/>
 
-	<br/>Total snowfall amounts near 10 cm are forecast, with snow beginning overnight tonight and continuing into Sunday afternoon. In some areas, snow is expected to become mixed with or change over to ice pellets and freezing rain on Sunday afternoon, before tapering to flurries by Sunday evening.<br/>
+	<br/>Total snowfall amounts near 10 cm are forecast, with snow beginning overnight tonight and continuing through the night. In some areas, snow is expected to become mixed with or change over to ice pellets and freezing rain on Sunday night before tapering off Monday morning.<br/>
 
 <br/>Be prepared to adjust your driving with changing road conditions. Accumulating snow could make travel difficult over some locations.<br/>
 
